# psywatch

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
components/: cpu_data.hpp  cpu_usage_graph.hpp  gpu_data.hpp  gpu_usage_graph.hpp  ram_data.hpp
structs/: cpu_struct.hpp  gpu_struct.hpp
util/: file_io.cpp  file_io.hpp  get_cpu_data.cpp  get_cpu_data.hpp  get_gpu_data.cpp  get_gpu_data.hpp  get_ram_data.cpp  get_ram_data.hpp  util.hpp
